--- a/CosmeticShop/CosmeticShop/Views/Admin/Login.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Admin/Login.cshtml
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-4 offset-4">
                 <form asp-controller="#" asp-action="#" class="login_form">
-                    <h3><i class="fas fa-cogs"></i> K42Shop</h3>
+                    <h3><i class="fas fa-cogs"></i> Cosmetic</h3>
                     <div class="form-group">
                         <input type="text" asp-for="Username" placeholder="Tên đăng nhập" class="form-control">
                         <span asp-validation-for="Username" class="text-danger"></span>
