--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/Users/_IndexLayout.cshtml";
-    ViewBag.Title = "CosmeticShop - Chuyên trang mua bán đồ công nghệ";
+    ViewBag.Title = "CosmeticShop - Chuyên trang mua bán mỹ phẩm và làm đẹp";
 }
 <div class="promo-area">
     <div class="zigzag-bottom"></div>
@@ -60,6 +60,10 @@
                                     </p>
                                     <div class="product-f-image">
                                         <img src="~/uploads/@item.Thumbnail" class="product__image" alt="" />
+                                        <div class="product-hover">
+                                            <a href="/Cart/SingleAddToCart/@item.Id" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Thêm Giỏ Hàng</a>
+                                            <a href="~/@item.TypeUrl/@item.NameUrl" class="view-details-link"><i class="fa fa-link"></i> Xem Chi Tiết</a>
+                                        </div>
                                     </div>
 
                                     <div class="product__info ">
