--- a/CosmeticShop/CosmeticShop/Views/Products/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Products/Index.cshtml
@@ -17,6 +17,7 @@
                     <div class="single-product">
                         @if (item.Saleoff != 0)
                         {
+
                             <p class="mrg0 iblck fl product__saleoff">-@item.Saleoff%</p>
                         }
                         <p class="mrg0 iblck fr product__views">
@@ -27,6 +28,10 @@
 
                         <div class="product-f-image">
                             <img src="~/uploads/@item.Thumbnail" class="product__image" alt="" />
+                            <div class="product-hover">
+                                <a href="/Cart/SingleAddToCart/@item.Id" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Thêm Giỏ Hàng</a>
+                                <a href="~/@item.TypeUrl/@item.NameUrl" class="view-details-link"><i class="fa fa-link"></i> Xem Chi Tiết</a>
+                            </div>
                         </div>
 
                         <div class="product__info ">
@@ -40,6 +45,9 @@
                             {
                                 <p class="mrg0 product__newprice">@String.Format("{0:0,0 VNĐ}", item.Price)</p>
                             }
+                                
+                            
+                               
                         </div>
                     </div>
                 </div>
