--- a/CosmeticShop/CosmeticShop/Views/Products/ListProducts.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Products/ListProducts.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid section">
     <!-- Sản phẩm mới -->
     <div class="container">
-        <h1 class="section__title">Kết quả tìm kiếm: </h1><h3 class="iblck" style="margin-left: 1rem">@Model.Value </h3>
+        <h1 class="section__title">Kết quả tìm kiếm: </h1><h3 class="iblck" style="margin-left: 1rem"><b>TẤT CẢ SẢN PHẨM LOẠI: </b>@ViewBag.TenType </h3>
         @{
             int dem = 1;
         }
