--- a/CosmeticShop/CosmeticShop/Views/Products/Single.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Products/Single.cshtml
@@ -3,17 +3,17 @@
     ViewBag.Title = "SingleProduct";
     Layout = "~/Views/Shared/Users/_IndexLayout.cshtml";
 }
-    <head>
-        @section OpenGraph{
-            <meta property="og:type" content="website">
-            <meta property="og:title" content="@Model.SingleProduct.Name">
-            <meta property="og:description" content="Sản phẩm chính hãng giá rẻ.">
-            <meta property="og:site_name" content="web42shop10.somee.com">
-            <meta property="og:image" content="http://www.web42shop10.somee.com/uploads/@Model.SingleProduct.Thumbnail">
-            <meta property="og:image:height" content="150px">
-            <meta property="og:image:width" content="150px">
-        }
-    </head>
+<head>
+    @section OpenGraph{
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="@Model.SingleProduct.Name">
+        <meta property="og:description" content="Sản phẩm chính hãng giá rẻ.">
+        <meta property="og:site_name" content="cosmeticshop.somee.com">
+        <meta property="og:image" content="http://www.cosmeticshop.somee.com/uploads/@Model.SingleProduct.Thumbnail">
+        <meta property="og:image:height" content="150px">
+        <meta property="og:image:width" content="150px">
+    }
+</head>
 <div class="container-fluid section__product">
     <div class="row">
         <!-- Sản phẩm tương tự -->
@@ -28,7 +28,7 @@
                         @if (item.Saleoff != 0)
                         {
                             <p class="other_product__oldprice">@String.Format("{0:0,0 VNĐ}", item.Price) </p>
-                            <p class="other_product__newprice">@String.Format("{0:0,0 VNĐ}", item.Price - (item.Price / 100 *item.Saleoff))</p>
+                            <p class="other_product__newprice">@String.Format("{0:0,0 VNĐ}", item.Price - (item.Price / 100 * item.Saleoff))</p>
                         }
                         else
                         {
@@ -81,72 +81,72 @@
                     <!-- Viết đánh giá phản hồi -->
                     @if (Context.Session.GetInt32("IdTaiKhoan").HasValue)
                     {
-                    <div class="blck w100 writecomment">
-                        <p class="mrg0 iblck writecomment__username"><strong>@Context.Session.GetString("TaiKhoan")</strong></p>
-                        <div class="iblck writecomment__stars">
-                            <script>
-                                function DrawStars(_point) {
-                                    var yellow = parseInt(_point, 10);
-                                    var display = "";
-                                    for (var i = 1; i <= 5; i++) {
-                                        if (i < yellow || i == yellow) {
-                                            display += "<i class=\"fas fa-star star--yellow\" onclick=\"DrawStars(" + parseInt(i, 10) + ")\"></i>";
-                                        }
-                                        else {
-                                            display += "<i class=\"fas fa-star star--black\" onclick=\"DrawStars(" + parseInt(i, 10) + ")\"></i>";
-                                        }
+                        <div class="blck w100 writecomment">
+                            <p class="mrg0 iblck writecomment__username"><strong>@Context.Session.GetString("TaiKhoan")</strong></p>
+                            <div class="iblck writecomment__stars">
+                                <script>
+                                    function DrawStars(_point) {
+                                        var yellow = parseInt(_point, 10);
+                                        var display = "";
+                                        for (var i = 1; i <= 5; i++) {
+                                            if (i < yellow || i == yellow) {
+                                                display += "<i class=\"fas fa-star star--yellow\" onclick=\"DrawStars(" + parseInt(i, 10) + ")\"></i>";
+                                            }
+                                            else {
+                                                display += "<i class=\"fas fa-star star--black\" onclick=\"DrawStars(" + parseInt(i, 10) + ")\"></i>";
+                                            }
 
-                                    }
-                                    document.getElementsByClassName("writecomment__stars")[0].innerHTML = display;
-                                    document.getElementsByClassName("writecomment__points")[0].value = parseInt(yellow, 10);
-                                    document.getElementById("stars").value = parseInt(yellow, 10);
-                                }</script>
-                            <i class="fas fa-star" onclick="DrawStars(1)"></i>
-                            <i class="fas fa-star" onclick="DrawStars(2)"></i>
-                            <i class="fas fa-star" onclick="DrawStars(3)"></i>
-                            <i class="fas fa-star" onclick="DrawStars(4)"></i>
-                            <i class="fas fa-star" onclick="DrawStars(5)"></i>
+                                        }
+                                        document.getElementsByClassName("writecomment__stars")[0].innerHTML = display;
+                                        document.getElementsByClassName("writecomment__points")[0].value = parseInt(yellow, 10);
+                                        document.getElementById("stars").value = parseInt(yellow, 10);
+                                    }</script>
+                                <i class="fas fa-star" onclick="DrawStars(1)"></i>
+                                <i class="fas fa-star" onclick="DrawStars(2)"></i>
+                                <i class="fas fa-star" onclick="DrawStars(3)"></i>
+                                <i class="fas fa-star" onclick="DrawStars(4)"></i>
+                                <i class="fas fa-star" onclick="DrawStars(5)"></i>
+                            </div>
+                            <form asp-controller="#" asp-action="#" method="post">
+                                <!-- Dòng input này để form gửi số điểm đánh giá sản phẩm lưu vào database, không được xóa -->
+                                <div id="stars" class="col-2"><input type="text" class="writecomment__points" name="stars" value="0" readonly hidden /></div>
+                                <textarea id="content" class="blck w100" cols="10" rows="1" placeholder="Đê lại bình luận hoặc đánh giá về sản phẩm tại đây ..."></textarea>
+                                <div class="txt-right"><button type="button" onclick="addComment(@Context.Session.GetInt32("IdTaiKhoan").Value, @Model.SingleProduct.Id)">Đăng bình luận</button></div>
+                            </form>
                         </div>
-                        <form asp-controller="#" asp-action="#" method="post">
-                            <!-- Dòng input này để form gửi số điểm đánh giá sản phẩm lưu vào database, không được xóa -->
-                            <div id="stars" class="col-2"><input type="text" class="writecomment__points" name="stars" value="0" readonly hidden /></div>
-                            <textarea id="content" class="blck w100" cols="10" rows="1" placeholder="Đê lại bình luận hoặc đánh giá về sản phẩm tại đây ..."></textarea>
-                            <div class="txt-right"><button type="button" onclick="addComment(@Context.Session.GetInt32("IdTaiKhoan").Value, @Model.SingleProduct.Id)">Đăng bình luận</button></div>
-                        </form>
-                    </div>
                     }
                     else
                     {
-                    @:<p class="mrg0 iblck writecomment__username"> Đăng nhập để thêm bình luận <p>
-                    }
+                        @:<p class="mrg0 iblck writecomment__username"> Đăng nhập để thêm bình luận <p>
+                        }
                     <div class="container-fluid mrg0 padd0" id="CommentContainer">
                         @foreach (var com in Model.ProductComments.Comments)
-                    {
-                        <div class="comment">
-                <p class="mrg0 iblck comment__username">@com.User</p>
-                <p class="mrg0 iblck comment__datetime"><i>@com.DateCreate</i></p>
-                <div class="blck comment_stars">
-                    @for (int i = 1; i <= 5; i++)
+                        {
+                            <div class="comment">
+                    <p class="mrg0 iblck comment__username">@com.User</p>
+                    <p class="mrg0 iblck comment__datetime"><i>@com.DateCreate</i></p>
+                    <div class="blck comment_stars">
+                        @for (int i = 1; i <= 5; i++)
+                        {
+                            if (i <= com.Stars)
                             {
-                                if (i <= com.Stars)
-                                {
-                    <i class="fas fa-star star--yellow"></i>
-                                }
-                                else
-                                {
-                    <i class="fas fa-star"></i>
-                                }
+                                <i class="fas fa-star star--yellow"></i>
                             }
+                            else
+                            {
+                                <i class="fas fa-star"></i>
+                            }
+                        }
+                    </div>
+                    <div class="comment__content">
+                        <p>@com.Content</p>
+                    </div>
                 </div>
-                <div class="comment__content">
-                    <p>@com.Content</p>
-                </div>
-                </div>
-                    }
-                    @if (Model.ProductComments.StillComments)
-                    {
-                        <button onclick="moreComments(@Model.ProductComments.IdProduct)" class="more-cmt">Xem Thêm</button>
-                    }
+            }
+                        @if (Model.ProductComments.StillComments)
+                        {
+                            <button onclick="moreComments(@Model.ProductComments.IdProduct)" class="more-cmt">Xem Thêm</button>
+                        }
                     </div>
                 </div><!-- end of Thông tin chính -->
                 <!-- Các nút Mua hàng,Thêm vào giỏ,Chia sẻ -->
@@ -169,43 +169,43 @@
                 </div><!-- end of Các nút Mua hàng,Thêm vào giỏ,Chia sẻ -->
             </div><!-- end of Chi tiết sản phẩm -->
         </div>
-    </div>
-</div>
-<p id="demo"></p>
+        </div>
+        </div>
+        <p id="demo"></p>
 
 
-<script>
-    var page = 1;
-</script>
-<script>
-    function moreComments(id) {
-        page++;
-        $.ajax({
-            url: "/Products/MoreComment",
-            type: "POST",
-            data: { id: id, page: page },
-            dataType: "HTML",
-            async: true,
-            success: function (data) {
-                $("#CommentContainer").html(data);
+        <script>
+            var page = 1;
+        </script>
+        <script>
+            function moreComments(id) {
+                page++;
+                $.ajax({
+                    url: "/Products/MoreComment",
+                    type: "POST",
+                    data: { id: id, page: page },
+                    dataType: "HTML",
+                    async: true,
+                    success: function (data) {
+                        $("#CommentContainer").html(data);
 
-            },
-        });
-    };
-    function addComment(idUser, idProduct) {
-        var content = $("#content").val();
-        var stars = $("#stars").val();
-        if (content != "") {
-            $.ajax({
-                url: "/Products/addComment",
-                type: "POST",
-                data: { idUser: idUser, idProduct: idProduct, stars: stars, content: content },
-                dataType: "HTML",
-                async: true,
-                success: function (data) {
-                    $("#CommentContainer").html(data);
-                },
-            });
-        }
-    };
-</script>
+                    },
+                });
+            };
+            function addComment(idUser, idProduct) {
+                var content = $("#content").val();
+                var stars = $("#stars").val();
+                if (content != "") {
+                    $.ajax({
+                        url: "/Products/addComment",
+                        type: "POST",
+                        data: { idUser: idUser, idProduct: idProduct, stars: stars, content: content },
+                        dataType: "HTML",
+                        async: true,
+                        success: function (data) {
+                            $("#CommentContainer").html(data);
+                        },
+                    });
+                }
+            };
+        </script>
