--- a/CosmeticShop/CosmeticShop/Views/Shared/Users/_FooterPartial.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/Users/_FooterPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<footer>
+﻿@using CosmeticShop.Models;
+@using Microsoft.AspNetCore.Http;
+<footer>
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5da3c3835de3e70013e3bcee&product=inline-share-buttons" async="async"></script>
     <script>
         (function (d, s, id) {
@@ -22,24 +24,24 @@
                 <p><i class="fab fa-facebook"></i> Fanpage: <a href="https://www.facebook.com" target="_blank">https://www.facebook.com</a></p>
             </div>
             <div class="col-4 footer__nav">
-                <a href="#" class="iblck">#Smartphone</a>
-                <a href="#" class="iblck">#Laptop</a>
-                <a href="#" class="iblck">#Chuột</a>
-                <a href="#" class="iblck">#Bàn phím</a>
-                <a href="#" class="iblck">#Lenovo</a>
-                <a href="#" class="iblck">#Samsung</a>
-                <a href="#" class="iblck">#Vietnammobile</a>
-                <a href="#" class="iblck">#SONY</a>
-                <a href="#" class="iblck">#Headphone</a>
-                <a href="#" class="iblck">#Bluetooth</a>
-                <a href="#" class="iblck">#ASUS</a>
-                <a href="#" class="iblck">#Dell</a>
-                <a href="#" class="iblck">#HP</a>
-                <a href="#" class="iblck">#Workstation</a>
-                <a href="#" class="iblck">#GTX3000</a>
-                <a href="#" class="iblck">#GPMN3004</a>
-                <a href="#" class="iblck">#IPhoneXMAS</a>
-                <a href="#" class="iblck">#IPhoneAndroid</a>
+               
+                @{
+                    int n = Model.ProductTypes.Count;
+                    @if (n > 0)
+                    {
+
+                       
+                                @for (int i = 0; i < n; i++)
+                                {
+                                    var type = Model.ProductTypes[i] as ProductType;
+                                    ViewBag.hau = type;
+                                    <a href="~/@type.URL" class="iblck">#@type.Type</a>
+                                }
+                           
+
+
+                    }
+                }
             </div>
             <div class="col-4 footer__map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.6511106447715!2d106.68001421428689!3d10.761348962415688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1b888ab357%3A0xc469f6e800231314!2zMjgwIEFuIETGsMahbmcgVsawxqFuZywgUGjGsOG7nW5nIDQsIFF14bqtbiA1LCBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1570035092189!5m2!1svi!2s" width="100" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
