--- a/CosmeticShop/CosmeticShop/Views/Shared/Users/_HeaderPartial.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/Users/_HeaderPartial.cshtml
@@ -18,7 +18,7 @@
 
                     @if (name != null)
                     {
-                        <a asp-controller="Home" asp-action="Index" class="iblck header__displayname"><i class="fas fa-user-alt"></i>
+                        <a asp-action="Profile" asp-route-id="@id" asp-controller="Users" class="iblck header__displayname"><i class="fas fa-user-alt"></i>
                             @name
                         </a>
                         <a href="~/giohang" class="iblck header__icon"><i class="fas fa-shopping-cart"></i></a>
