--- a/CosmeticShop/CosmeticShop/Views/Shared/Users/_TopMenuPartial.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/Users/_TopMenuPartial.cshtml
@@ -27,8 +27,8 @@
             }
            
         }
-        <a href="#" class="topmenu__href">LIÊN HỆ</a>
-        <a href="#" class="topmenu__href">ABOUT</a>
+        <a href="~/lienhe/index" class="topmenu__href">LIÊN HỆ</a>
+        <a href="~/lienhe/about" class="topmenu__href">ABOUT</a>
 
 
     </div>
