--- a/CosmeticShop/CosmeticShop/Views/Cart/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Cart/Index.cshtml
@@ -67,13 +67,16 @@
                             if (Context.Session.GetInt32("IdCart") != null)
                             {
                                 int anocart_id = (int)Context.Session.GetInt32("IdCart");
-                                <a asp-controller="Checkout" asp-action="MustSignUp" class="button button--gotocheckout" asp-route-anocartid="@anocart_id">THANH TOÁN</a>
+                        
+                                <a asp-controller="Home" asp-action="Index" class="button button--gotocheckout" style="margin-right:700px"><< TIẾP TỤC MUA HÀNG</a>
+                                <a asp-controller="Checkout" asp-action="MustSignUp" class="button button--new" asp-route-anocartid="@anocart_id">THANH TOÁN</a>
                             }
                         }
                         else
                         {
                             int userid = (int)Context.Session.GetInt32("IdTaiKhoan");
-                            <a asp-controller="Checkout" asp-action="AlreadySignUp" class="button button--gotocheckout" asp-route-userid="@userid">THANH TOÁN</a>
+                                <a asp-controller="Home" asp-action="Index" class="button button--gotocheckout" style="margin-right:700px"><< TIẾP TỤC MUA HÀNG</a>
+                            <a asp-controller="Checkout" asp-action="AlreadySignUp" class="button button--new" asp-route-userid="@userid">THANH TOÁN</a>
                         }
                     </td>
                 </tr>
