--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -172,7 +172,7 @@
                     <form action="https://azurewebsites.us4.list-manage.com/subscribe/post?u=3f8bbc543b575a445f544f815&amp;id=2d915e7993" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
                             <h2>Đăng ký nhận thông báo</h2>
-                            <div class="indicates-required"><span class="asterisk">*</span> Những thông tin này không được bỏ trống</div
+                            <div class="indicates-required"><span class="asterisk">*</span> Những thông tin này không được bỏ trống</div>
                             <div class="mc-field-group">
                                 <label for="mce-EMAIL">
                                     Email Address  <span class="asterisk">*</span>
