--- a/CosmeticShop/CosmeticShop/Views/Shared/Users/_TopMenuPartial.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/Users/_TopMenuPartial.cshtml
@@ -6,6 +6,29 @@
         <a href="~/" class="topmenu__href">TRANG CHỦ</a>
         <a href="~/products/orderbydatecreate" class="topmenu__href">SẢN PHẨM</a>
         @{
+            int n1 = Model.productBrands.Count;
+            @if (n1 > 0)
+            {
+
+                <div class="topmenu__href topmenu__href--dropdown">
+                    <a href="#">THƯƠNG HIỆU<i class="fas fa-caret-down "></i></a>
+                    <div class="iblck mrg0 padd0 txt-center topmenu__submenu ">
+                        @for (int i = 0; i < n1; i++)
+                        {
+                            var type = Model.productBrands[i] as ProductBrand;
+                            ViewBag.hau = type;
+                            <a href="~/Products/@type.Name" class="topmenu__href">@type.Name</a>
+                        }
+                    </div>
+
+                </div>
+
+
+            }
+
+        }
+
+        @{
             int n = Model.ProductTypes.Count;
             @if (n > 0)
             {
@@ -25,7 +48,7 @@
 
 
             }
-           
+
         }
         <a href="~/lienhe/index" class="topmenu__href">LIÊN HỆ</a>
         <a href="~/lienhe/about" class="topmenu__href">ABOUT</a>
