--- a/CosmeticShop/CosmeticShop/Views/Admin/_AdminSideMenuPartial.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Admin/_AdminSideMenuPartial.cshtml
@@ -4,7 +4,7 @@
     <a asp-controller="Admin" asp-action="OrdersOverview" class="sidemenu__link "><i class="fas fa-shipping-fast"></i> Đơn hàng </a>
     <a asp-controller="Admin" asp-action="ProductsOverview" class="sidemenu__link "><i class="fas fa-laptop"></i> Sản phẩm </a>
     <a asp-controller="Admin" asp-action="UsersOverview" class="sidemenu__link "><i class="fas fa-user"></i> Khách hàng </a>
-    <a asp-controller="Admin" asp-action="Report" class="sidemenu__link "><i class="fas fa-chart-pie"></i> Thống kê </a>
+    <a href="https://analytics.google.com/analytics/web/#/report-home/a154770721w218390520p208226091" class="sidemenu__link "><i class="fas fa-chart-pie"></i> Thống kê </a>
     <a asp-controller="Admin" asp-action="AdminsOverview" class="sidemenu__link "><i class="fas fa-user-tie"></i> Quản trị </a>
     <a asp-controller="Admin" asp-action="Setting" class="sidemenu__link "><i class="fas fa-cog"></i> Cài đặt </a>
     <a href="https://dashboard.tawk.to/?lang=vi#/chat" class="sidemenu__link "><i class="fas fa-cog"></i> Chat </a>
