--- a/CosmeticShop/CosmeticShop/Views/Checkout/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Checkout/Index.cshtml
@@ -31,36 +31,51 @@
                         <tr>
                             @foreach (var pro in Model.Products)
                             {
-                                if ( pro.Id == item.Product_Id){ name = pro.Name;}
+                                if (pro.Id == item.Product_Id) { name = pro.Name; }
                             }
                             <th scope="row">@stt</th>
                             <td>@name</td>
                             <td class="clCenter">@item.Quantity</td>
                             <td class="clCenter"> @String.Format("{0:0,0 VNĐ}", item.PriceTotal)</td>
-                            
+
                         </tr>
                         totalePrice += item.PriceTotal;
                     }
                 </table>
-                @{Double @USD = totalePrice / 23000;}  
-                <h2>Tổng cộng: @String.Format("{0:0,0 VNĐ}", totalePrice) </h2>
-                <h2>~  @String.Format("{0:0,0 USD}", USD) </h2>
-                @{int orderid = (int)Context.Session.GetInt32("OrderId");}
-               <a class="button button--delete" asp-controller="Checkout" asp-action="Cancel" asp-route-id="@orderid">Hủy đơn hàng</a>
+
             </div>
 
             <div class="col-5">
-                <a asp-controller="NganLuong" asp-action="Index" class="button button--order--nganluong">Thanh toán qua Ngân Lượng</a>
+                @{Double @USD = totalePrice / 23000;}
+                <h2 style="color:red">Tổng cộng: @String.Format("{0:0,0 VNĐ}", totalePrice) </h2>
+                <h2 style="color:red">~  @String.Format("{0:0,0 USD}", USD) </h2>
+                @{int orderid = (int)Context.Session.GetInt32("OrderId");}
+                <a class="button button--delete" asp-controller="Checkout" asp-action="Cancel" asp-route-id="@orderid">Hủy đơn hàng</a>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-6">
+
+
+                @{
+                    int idtaikhoan = (int)Context.Session.GetInt32("IdTaiKhoan");
+                }
+                <a asp-controller="Checkout" asp-action="PayAfter" class="button button--order--after" style="width:350px">Thanh toán khi nhận hàng</a>
+
+
+                <a asp-controller="NganLuong" asp-action="Index" class="button button--order--nganluong" style="width:350px">Thanh toán qua Ngân Lượng</a>
                 <script src="https://www.paypal.com/sdk/js?client-id=ASwEi_Epa3m8n3CWA3FwX8SZGOkGGrQGecHV0V9TwjoEDFyEjVkAAXmsxiZnacTFyPCs3OaAgKNyP7V4">
-                    // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+                                                                                // Required. Replace SB_CLIENT_ID with your sandbox client ID.
                 </script>
-                
+            </div>
+            <div class="col-6">
                 @*code javascript paypal*@
                 <form method="post" action="@ViewBag.payPalConfig.PostUrl">
                     <input type="hidden" name="upload" value="1" />
                     @{
-                        
-                        string return_url = ViewBag.payPalConfig.ReturnUrl+ "?orderid=" + orderid.ToString();
+
+                        string return_url = ViewBag.payPalConfig.ReturnUrl + "?orderid=" + orderid.ToString();
                     }
                     <input type="hidden" name="return" value="@return_url" />
                     <input type="hidden" name="cmd" value="_cart" />
@@ -74,7 +89,7 @@
                         string name = "";
                         foreach (var pro in Model.Products)
                         {
-                            if (pro.Id == item.Product_Id){ name = pro.Name;}
+                            if (pro.Id == item.Product_Id) { name = pro.Name; }
                         }
                         double Price = item.PriceTotal / 23000;
                         <input type="hidden" name="item_number_@index" value="@item.Id" />
@@ -83,15 +98,12 @@
                         <input type="hidden" name="quantity_@index" value="@item.Quantity" />
                         index++;
                     }
-                    <button type="submit" class="button button--order--paypal">Thanh toán qua Paypal</button>
+                    
+                  
+                    <input type="image" alt="Submit" src="~/images/paypal.jpg" style="width:350px;height:100px" />
                 </form>
-
-                @{
-                    int idtaikhoan = (int)Context.Session.GetInt32("IdTaiKhoan");
-                }
-                <a asp-controller="Checkout" asp-action="PayAfter" class="button button--order--after">Thanh toán khi nhận hàng</a>
+            </div>
             </div>
         </div>
     </div>
-</div>
     
