--- a/CosmeticShop/CosmeticShop/Views/LienHe/About.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/LienHe/About.cshtml
@@ -63,9 +63,9 @@
 
 
 
-                    <p>
-                        Chào mừng bạn đến với CosmeticShop! Chúng tôi mong muốn cung cấp cho khách hàng của chúng tôi nhiều quần áo mới nhất. Chúng tôi đã đi một chặng đường dài, vì vậy chúng tôi biết chính xác hướng đi nào khi cung cấp cho bạn các sản phẩm chất lượng cao nhưng thân thiện với ngân sách. Chúng tôi cung cấp tất cả điều này trong khi cung cấp dịch vụ khách hàng tuyệt vời và hỗ trợ thân thiện. Chúng tôi luôn theo dõi các xu hướng mới nhất trong thời trang và đặt mong muốn của khách hàng lên hàng đầu. Đó là lý do tại sao chúng tôi đã làm hài lòng khách hàng trên toàn thế giới và vui mừng khi trở thành một phần của ngành thời trang. Lợi ích của khách hàng luôn là ưu tiên hàng đầu của chúng tôi, vì vậy chúng tôi hy vọng bạn sẽ thích sản phẩm của chúng tôi nhiều như chúng tôi thích làm cho chúng có sẵn cho bạn.
-                    </p>
+                    <h2>
+                        Chào mừng bạn đến với CosmeticShop! Chúng tôi mong muốn cung cấp cho khách hàng của chúng tôi nhiều quần áo mới nhất. Chúng tôi đã đi một chặng đường dài, vì vậy chúng tôi biết chính xác hướng đi nào khi cung cấp cho bạn các sản phẩm chất lượng cao nhưng thân thiện với ngân sách. Chúng tôi cung cấp tất cả điều này trong khi cung cấp dịch vụ khách hàng tuyệt vời và hỗ trợ thân thiện. Chúng tôi luôn theo dõi các xu hướng mới nhất trong làm đẹp và đặt mong muốn của khách hàng lên hàng đầu. Đó là lý do tại sao chúng tôi đã làm hài lòng khách hàng trên toàn thế giới và vui mừng khi trở thành một phần của ngành thời trang. Lợi ích của khách hàng luôn là ưu tiên hàng đầu của chúng tôi, vì vậy chúng tôi hy vọng bạn sẽ thích sản phẩm của chúng tôi nhiều như chúng tôi thích làm cho chúng có sẵn cho bạn.
+                    </h2>
                 </div>
             </div>
         </div>
