--- a/CosmeticShop/CosmeticShop/Views/Users/Profile.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Users/Profile.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    ViewBag.Title = "Thông Tin Tài Khoản";
+    Layout = "~/Views/Shared/Users/_IndexLayout.cshtml";
+}
+<!DOCTYPE html>
 <html>
 <head>
     <title>Bootstrap Example</title>
@@ -18,89 +22,90 @@
 <body>
     <hr>
     <div class="container bootstrap snippet">
-        
-        
-            <div class="col-sm-9">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-                   
-                </ul>
 
-                <div class="tab-content">
-                    <div class="tab-pane active" id="home">
-                        <hr>
-                        <form class="form" action="##" method="post" id="registrationForm">
-                            <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="first_name">First name</label>
-                                    <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
-                                </div>
+        <div class="col-sm-9">
+            <ul class="nav nav-tabs">
+                <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+
+            </ul>
+
+            <div class="tab-content">
+                <div class="tab-pane active" id="home">
+                    <hr>
+                    <form class="form" action="##" method="post" id="registrationForm">
+                        <div class="form-group">
+
+                            <div class="col-xs-6">
+                                <label for="first_name">First name</label>
+                                <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="last_name">Last name</label>
-                                    <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
-                                </div>
+                            <div class="col-xs-6">
+                                <label for="last_name">Last name</label>
+                                <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
                             </div>
+                        </div>
 
-                            <div class="form-group">
+                        <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="phone">Phone</label>
-                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
-                                </div>
+                            <div class="col-xs-6">
+                                <label for="phone">Phone</label>
+                                <input type="text" class="form-control" name="phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
                             </div>
+                        </div>
 
-                            <div class="form-group">
-                                <div class="col-xs-6">
-                                    <label for="mobile">Mobile</label>
-                                    <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
-                                </div>
+                        <div class="form-group">
+                            <div class="col-xs-6">
+                                <label for="mobile">Mobile</label>
+                                <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
-                                </div>
+                            <div class="col-xs-6">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="email">Location</label>
-                                    <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
-                                </div>
+                            <div class="col-xs-6">
+                                <label for="email">Location</label>
+                                <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="password">Password</label>
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
-                                </div>
+                            <div class="col-xs-6">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
                             </div>
-                            <div class="form-group">
+                        </div>
+                        <div class="form-group">
 
-                                <div class="col-xs-6">
-                                    <label for="password2">Verify</label>
-                                    <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
-                                </div>
+                            <div class="col-xs-6">
+                                <label for="password2">Verify</label>
+                                <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
                             </div>
-                            <div class="form-group">
-                                <div class="col-xs-12">
-                                    <br>
-                                    <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                                    <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                                </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12">
+                                <br>
+                                <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                                <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
                             </div>
-                        </form>
+                        </div>
+                    </form>
 
-                        <hr>
+                    <hr>
 
-                    
-            </div><!--/tab-content-->
-        </div><!--/col-9-->
-    </div><!--/row-->
+
+                </div><!--/tab-content-->
+            </div><!--/col-9-->
+        </div><!--/row-->
+    </div>
 </body>
 </html>
