--- a/CosmeticShop/CosmeticShop/Views/Products/ListProducts.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Products/ListProducts.cshtml
@@ -33,6 +33,10 @@
                         </p>
                         <div class="product-f-image">
                             <img src="~/uploads/@item.Thumbnail" class="product__image" alt="" />
+                            <div class="product-hover">
+                                <a href="/Cart/SingleAddToCart/@item.Id" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Thêm Giỏ Hàng</a>
+                                <a href="~/@item.TypeUrl/@item.NameUrl" class="view-details-link"><i class="fa fa-link"></i> Xem Chi Tiết</a>
+                            </div>
                         </div>
 
                         <div class="product__info ">
