--- a/CosmeticShop/CosmeticShop/Views/Shared/Users/_FooterPartial.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/Users/_FooterPartial.cshtml
@@ -19,9 +19,25 @@
     <div class="container">
         <div class="row">
             <div class="col-4 footer__info">
-                <p><i class="fas fa-store"></i> Địa chỉ cửa hàng: 280 An Dương Vương, Quận 5 thành phố Hồ Chí Minh</p>
-                <p><i class="fas fa-clock"></i> Giờ mở cửa: 8h30 sáng đến 9h tối các ngày trong tuần</p>
-                <p><i class="fab fa-facebook"></i> Fanpage: <a href="https://www.facebook.com" target="_blank">https://www.facebook.com</a></p>
+              
+                @{
+                    int n1 = Model.productBrands.Count;
+                    @if (n1 > 0)
+                    {
+
+
+                        @for (int i = 0; i < n1; i++)
+                        {
+                            var type = Model.productBrands[i] as ProductBrand;
+                            ViewBag.hau = type;
+                            <a href="~/Products/@type.Name" class="iblck">#@type.Name</a>
+                           
+                        }
+
+
+
+                    }
+                }
             </div>
             <div class="col-4 footer__nav">
 
@@ -43,12 +59,27 @@
                     }
                 }
             </div>
+
+
             <div class="col-4 footer__map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.6511106447715!2d106.68001421428689!3d10.761348962415688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f1b888ab357%3A0xc469f6e800231314!2zMjgwIEFuIETGsMahbmcgVsawxqFuZywgUGjGsOG7nW5nIDQsIFF14bqtbiA1LCBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1570035092189!5m2!1svi!2s" width="100" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-12">
+            <h4 style="color:red; text-align:center;">
+                <i class="fas fa-store"></i> Địa chỉ cửa hàng: 280 An Dương Vương, Quận 5 thành phố Hồ Chí Minh <br />
+                <i class="fas fa-clock"></i> Giờ mở cửa: 8h30 sáng đến 9h tối các ngày trong tuần<br />
+                <i class="fab fa-facebook"></i> Fanpage: <a href="https://www.facebook.com" target="_blank">https://www.facebook.com</a><br />
+            </h4>
+            <br />
+            <h5 style=" text-align:center; color:white">© 2019 Cosmetic. All rights reserved | Design by hauvx</h5>
+        </div>
+        
+    </div>
+    <br />
+    <br />
 </footer>
 
 <!--Start of Tawk.to Script-->
