fix index admin

--- a/CosmeticShop/CosmeticShop/Views/Admin/AdminsOverview.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Admin/AdminsOverview.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid overview">
     <div class="row">
         <div class="container-fluid">
-            <p class="overview__title">Sản phẩm của K42Shop</p>
+            <p class="overview__title">Thành Viên của Cosmetic</p>
         </div>
     </div>
     <a asp-controller="Admin" asp-action="AdminNew" class="overview__button overview__button--new"><i class="fas fa-plus"></i>Thêm quản trị viên</a>
