--- a/CosmeticShop/CosmeticShop/Views/Admin/ProductsOverview.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Admin/ProductsOverview.cshtml
@@ -44,7 +44,7 @@
     <div class="row">
         <div class="container-fluid">
             <a asp-controller="Admin" asp-action="ProductsOverview" class="overview__title overview__title--products overview__title--active">Sản phẩm</a>
-            <a asp-controller="Admin" asp-action="ProductBrandsOverview" class="overview__title overview__title--brands">Nhãn hàng</a>
+            <a asp-controller="Admin" asp-action="ProductBrandsOverview" class="overview__title overview__title--brands">Thương Hiệu</a>
             <a asp-controller="Admin" asp-action="ProductTypesOverview" class="overview__title overview__title--types">Loại sản phẩm</a>
         </div>
     </div>
