--- a/CosmeticShop/CosmeticShop/Views/Admin/SearchProductTypeAdmin.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Admin/SearchProductTypeAdmin.cshtml
@@ -46,7 +46,7 @@
     <div class="row">
         <div class="container-fluid">
             <a asp-controller="Admin" asp-action="ProductsOverview" class="overview__title overview__title--products">Sản phẩm</a>
-            <a asp-controller="Admin" asp-action="ProductBrandsOverview" class="overview__title overview__title--brands overview__title--active">Nhãn hàng</a>
+            <a asp-controller="Admin" asp-action="ProductBrandsOverview" class="overview__title overview__title--brands overview__title--active">Thương Hiệu</a>
             <a asp-controller="Admin" asp-action="ProductTypesOverview" class="overview__title overview__title--types">Loại sản phẩm</a>
         </div>
     </div>
