--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="section__title " style="text-align:center; color:red">MUA NHIỀU XEM NHIỀU</h1>
+                <h1 class="section__title " style="text-align:center; color:red">SẢN PHẨM NỔI BẬT</h1>
                 <div class="product-carousel">
                     <div class="row">
                         @foreach (var item in Model.ViewMoreProduct)
