--- a/CosmeticShop/CosmeticShop/Views/Products/Single.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Products/Single.cshtml
@@ -53,7 +53,7 @@
             <div class="row">
                 <!-- Thông tin chính -->
                 <div class="col-9">
-                    <img src="~/uploads/@Model.SingleProduct.Thumbnail">
+                    <img src="~/uploads/@Model.SingleProduct.Thumbnail"  style="width:100%; height:500px;">
                     <table>
                         <tr>
                             <th>Tên sản phẩm</th>
