--- a/CosmeticShop/CosmeticShop/Views/Products/Single.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Products/Single.cshtml
@@ -8,8 +8,8 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="@Model.SingleProduct.Name">
         <meta property="og:description" content="Sản phẩm chính hãng giá rẻ.">
-        <meta property="og:site_name" content="cosmeticshop.somee.com">
-        <meta property="og:image" content="http://www.cosmeticshop.somee.com/uploads/@Model.SingleProduct.Thumbnail">
+        <meta property="og:site_name" content="cosmeticshop20.azurewebsites.net">
+        <meta property="og:image" content="https://cosmeticshop20.azurewebsites.net/uploads/@Model.SingleProduct.Thumbnail">
         <meta property="og:image:height" content="150px">
         <meta property="og:image:width" content="150px">
     }
@@ -163,6 +163,8 @@
                         <!-- Go to www.addthis.com/dashboard to customize your tools -->
                         <div class="addthis_inline_share_toolbox_05nr"></div>
                     </div>
+
+        
                     <!--<div class="product__main__tags">
                         <a href="#">#laptop</a><a href="#">#SONY</a><a href="#">#2019</a>
                     </div>-->
