--- a/CosmeticShop/CosmeticShop/Views/User/Register.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/User/Register.cshtml
@@ -40,7 +40,7 @@
                     <span asp-validation-for="@Model.User.Password" class="text-danger"></span>
                 </div>
             </div>
-    
+
             <div class="form-row">
                 <div class="form-group col-md-2">
                     <label asp-for="@Model.User.AddressApartment">Số nhà</label>
@@ -83,11 +83,18 @@
                     </select>
                 </div>
             </div>
+            <div class="form-row">
+                <div class="form-group col-md-8">
+                    
+                    <p style="color:red">Kiểm tra email để kích hoạt tài khoản</p>
+                    
+                </div>
+            </div>
 
-            <input type="hidden" asp-for="@Model.User.Role_Id" value="4">
-            <br />
-            
-            <input class="btn btn-primary btn-lg" type="submit" value="Đăng Ký">
-        </form>
+                <input type="hidden" asp-for="@Model.User.Role_Id" value="4">
+                <br />
+
+                <input class="btn btn-primary btn-lg" type="submit" value="Đăng Ký">
+</form>
     </div>
 </div>
